fix: HuggingFace Spaces compatibility (port 7860)

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 # Local development
 VITE_BACKEND_URL=http://localhost:8000
 
-# Production (after deploying backend to Render/Railway)
-# VITE_BACKEND_URL=https://your-backend-name.onrender.com
+# Production (Render backend)
+# VITE_BACKEND_URL=https://biogenesis-8ebk.onrender.com
