--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,8 +21,10 @@ seaborn>=0.12.0
 pyyaml>=6.0
 tqdm>=4.65.0
 
-# Optional (for development)
-# pytest>=7.4.0
-# tensorboard>=2.13.0fastapi>=0.100.0
+# API Server
+fastapi>=0.100.0
 uvicorn>=0.20.0
 python-multipart>=0.0.6
+
+# HuggingFace Hub (for auto-downloading model weights)
+huggingface_hub>=0.20.0
