perf: use pytorch base image in Dockerfile (faster HF Spaces build)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,22 +1,26 @@
-FROM python:3.11-slim
+# Use PyTorch base image — torch pre-installed, builds in ~20s instead of 124s
+FROM pytorch/pytorch:2.5.1-cuda12.4-cudnn9-runtime
 
-# HuggingFace Spaces metadata
 LABEL maintainer="TCGxBill"
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
-    && rm -rf /var/lib/apt/lists/*
-
+# Only install packages NOT already in the base image
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir \
+    torch-geometric \
+    biopython \
+    fastapi \
+    uvicorn \
+    python-multipart \
+    pyyaml \
+    scikit-learn \
+    huggingface_hub \
+    && rm -rf /root/.cache/pip
 
 COPY . .
 
 # HuggingFace Spaces requires port 7860
-# Render uses PORT env var (defaults to 8000)
 EXPOSE 7860
 
 CMD ["python", "server.py"]
